--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                         illo minima atque voluptatem!</p>
                     <div class="row">
                         <div class="col-lg-12">
-                            <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#tipHistory">Tip
-                                History</button>
+                            <!-- <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#tipHistory">Tip
+                                History</button> -->
                         </div>
                     </div>
                     </p>
