--- a/index.html
+++ b/index.html
@@ -158,31 +158,43 @@
                     <tbody class="records">
                         <tr>
                             <td>1</td>
-                            <td>Wolves vs Liverpool</td>
-                            <td>Away</td>
+                            <td>Everton vs Arsenal</td>
+                            <td>Away or Draw</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>RB Leipzig vs Augsburg</td>
-                            <td>Home</td>
-                        </tr>
-
-                        <tr>
-                            <td>3</td>
-                            <td>Fulham vs Luton</td>
+                            <td>Lyon vs Le Havre</td>
                             <td>Home or Draw</td>
                         </tr>
 
                         <tr>
+                            <td>3</td>
+                            <td>Fernebahce vs Antalyaspor</td>
+                            <td>Over 1.5</td>
+                        </tr>
+
+                        <tr>
                             <td>4</td>
-                            <td>Tottenham vs Sheffield Utd</td>
-                            <td>Home</td>
+                            <td>Trabzonspor vs Besiktas</td>
+                            <td>Over 1.5</td>
                         </tr>
 
                         <tr>
                             <td>5</td>
-                            <td>Genoa vs Napoli</td>
-                            <td>Away or Draw</td>
+                            <td>Fiorentina vs Atalanta	</td>
+                            <td>Over 2.5 Yellow Cards</td>
+                        </tr>
+
+                        <tr>
+                            <td>6</td>
+                            <td>Marseille vs Toulouse</td>
+                            <td>Home or Draw</td>
+                        </tr>
+
+                        <tr>
+                            <td>7</td>
+                            <td>Aarhus vs Brondby</td>
+                            <td>GG(Both teams to score)</td>
                         </tr>
                     </tbody>
                 </table>
