--- a/index.html
+++ b/index.html
@@ -158,44 +158,33 @@
                     <tbody class="records">
                         <tr>
                             <td>1</td>
-                            <td>Everton vs Arsenal</td>
-                            <td>Away or Draw</td>
+                            <td>Nottingham vs Burnley</td>
+                            <td>Home or Draw</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Lyon vs Le Havre</td>
+                            <td>Boavista Porto vs GD Chaves</td>
                             <td>Home or Draw</td>
                         </tr>
 
                         <tr>
                             <td>3</td>
-                            <td>Fernebahce vs Antalyaspor</td>
+                            <td>FC Eindhoven vs ADO Den Haag</td>
                             <td>Over 1.5</td>
                         </tr>
 
                         <tr>
                             <td>4</td>
-                            <td>Trabzonspor vs Besiktas</td>
-                            <td>Over 1.5</td>
+                            <td>Odense vs Silkeborg</td>
+                            <td>Away or Draw</td>
                         </tr>
 
                         <tr>
                             <td>5</td>
-                            <td>Fiorentina vs Atalanta	</td>
-                            <td>Over 2.5 Yellow Cards</td>
+                            <td>Al-Ittihad FC vs Olmaliq</td>
+                            <td>Home</td>
                         </tr>
 
-                        <tr>
-                            <td>6</td>
-                            <td>Marseille vs Toulouse</td>
-                            <td>Home or Draw</td>
-                        </tr>
-
-                        <tr>
-                            <td>7</td>
-                            <td>Aarhus vs Brondby</td>
-                            <td>GG(Both teams to score)</td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
