--- a/index.html
+++ b/index.html
@@ -158,31 +158,31 @@
                     <tbody class="records">
                         <tr>
                             <td>1</td>
-                            <td>Nottingham vs Burnley</td>
-                            <td>Home or Draw</td>
+                            <td>Man City vs FK Crvena</td>
+                            <td>Over 2.5</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Boavista Porto vs GD Chaves</td>
-                            <td>Home or Draw</td>
+                            <td>Barcelona vs Royal Antwerp FC</td>
+                            <td>Over 2.5</td>
                         </tr>
 
                         <tr>
                             <td>3</td>
-                            <td>FC Eindhoven vs ADO Den Haag</td>
+                            <td>PSG vs Borussia Dortmund</td>
                             <td>Over 1.5</td>
                         </tr>
 
                         <tr>
                             <td>4</td>
-                            <td>Odense vs Silkeborg</td>
-                            <td>Away or Draw</td>
+                            <td>Milan vs Newcastle</td>
+                            <td>1.5</td>
                         </tr>
 
                         <tr>
                             <td>5</td>
-                            <td>Al-Ittihad FC vs Olmaliq</td>
-                            <td>Home</td>
+                            <td>Young Boys Bern vs RB Leipzig</td>
+                            <td>1.5</td>
                         </tr>
 
                     </tbody>
