--- a/index.html
+++ b/index.html
@@ -159,30 +159,30 @@
                         <tr>
                             <td>1</td>
                             <td>Man City vs FK Crvena</td>
-                            <td>Over 2.5</td>
+                            <td>Over 2.5 goals</td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td>Barcelona vs Royal Antwerp FC</td>
-                            <td>Over 2.5</td>
+                            <td>Over 2.5 goals</td>
                         </tr>
 
                         <tr>
                             <td>3</td>
                             <td>PSG vs Borussia Dortmund</td>
-                            <td>Over 1.5</td>
+                            <td>Over 1.5 goals</td>
                         </tr>
 
                         <tr>
                             <td>4</td>
                             <td>Milan vs Newcastle</td>
-                            <td>1.5</td>
+                            <td>Over 1.5 goals</td>
                         </tr>
 
                         <tr>
                             <td>5</td>
                             <td>Young Boys Bern vs RB Leipzig</td>
-                            <td>1.5</td>
+                            <td>Over 1.5 goals</td>
                         </tr>
 
                     </tbody>
