--- a/index.html
+++ b/index.html
@@ -158,31 +158,42 @@
                     <tbody class="records">
                         <tr>
                             <td>1</td>
-                            <td>Man City vs FK Crvena</td>
-                            <td>Over 2.5 goals</td>
+                            <td>Real Madrid vs Union Berlin</td>
+                            <td>Home</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Barcelona vs Royal Antwerp FC</td>
-                            <td>Over 2.5 goals</td>
+                            <td>Galatasaray Istanbul vs Copenhagen</td>
+                            <td>Over 1.5 goals</td>
                         </tr>
 
                         <tr>
                             <td>3</td>
-                            <td>PSG vs Borussia Dortmund</td>
-                            <td>Over 1.5 goals</td>
+                            <td>Bayern Munich vs Man Utd</td>
+                            <td>Home or Draw</td>
                         </tr>
 
                         <tr>
                             <td>4</td>
-                            <td>Milan vs Newcastle</td>
-                            <td>Over 1.5 goals</td>
+                            <td>Real Sociedad vs Inter Milan</td>
+                            <td>Away</td>
                         </tr>
 
                         <tr>
                             <td>5</td>
-                            <td>Young Boys Bern vs RB Leipzig</td>
-                            <td>Over 1.5 goals</td>
+                            <td>Sevilla vs Lens</td>
+                            <td>Home or Draw</td>
+                        </tr>
+
+                        <tr>
+                            <td>6</td>
+                            <td>SL Benfica vs Salzburg</td>
+                            <td>Home or Draw</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>Arsenal vs PSV Eindhoven</td>
+                            <td>Over 1.5</td>
                         </tr>
 
                     </tbody>
