--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <tr>
                             <td>7</td>
                             <td>Arsenal vs PSV Eindhoven</td>
-                            <td>Over 1.5</td>
+                            <td>Over 1.5 goals</td>
                         </tr>
 
                     </tbody>
