--- a/index.html
+++ b/index.html
@@ -158,42 +158,31 @@
                     <tbody class="records">
                         <tr>
                             <td>1</td>
-                            <td>Real Madrid vs Union Berlin</td>
-                            <td>Home</td>
+                            <td>LASK vs Liverpool</td>
+                            <td>Away</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Galatasaray Istanbul vs Copenhagen</td>
-                            <td>Over 1.5 goals</td>
+                            <td>Panathinaikos Athens vs Villarreal</td>
+                            <td>Handicap Away(0:2)</td>
                         </tr>
 
                         <tr>
                             <td>3</td>
-                            <td>Bayern Munich vs Man Utd</td>
-                            <td>Home or Draw</td>
-                        </tr>
-
-                        <tr>
-                            <td>4</td>
-                            <td>Real Sociedad vs Inter Milan</td>
+                            <td>FC Sheriff Tiraspol vs Roma</td>
                             <td>Away</td>
                         </tr>
 
                         <tr>
-                            <td>5</td>
-                            <td>Sevilla vs Lens</td>
-                            <td>Home or Draw</td>
+                            <td>4</td>
+                            <td>Bayern Leverkusen vs Hacken Gothenburg</td>
+                            <td>Home</td>
                         </tr>
 
                         <tr>
-                            <td>6</td>
-                            <td>SL Benfica vs Salzburg</td>
+                            <td>5</td>
+                            <td>Sparta Prague vs Aris Limassol FC</td>
                             <td>Home or Draw</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td>Arsenal vs PSV Eindhoven</td>
-                            <td>Over 1.5 goals</td>
                         </tr>
 
                     </tbody>
