--- a/index.html
+++ b/index.html
@@ -158,31 +158,13 @@
                     <tbody class="records">
                         <tr>
                             <td>1</td>
-                            <td>LASK vs Liverpool</td>
-                            <td>Away</td>
+                            <td>FC Nordsjaelland vs Hvidovre IF</td>
+                            <td>Home</td>
                         </tr>
                         <tr>
                             <td>2</td>
-                            <td>Panathinaikos Athens vs Villarreal</td>
-                            <td>Handicap Away(0:2)</td>
-                        </tr>
-
-                        <tr>
-                            <td>3</td>
-                            <td>FC Sheriff Tiraspol vs Roma</td>
-                            <td>Away</td>
-                        </tr>
-
-                        <tr>
-                            <td>4</td>
-                            <td>Bayern Leverkusen vs Hacken Gothenburg</td>
-                            <td>Home</td>
-                        </tr>
-
-                        <tr>
-                            <td>5</td>
-                            <td>Sparta Prague vs Aris Limassol FC</td>
-                            <td>Home or Draw</td>
+                            <td>Halmstads BK vs IF Elfsbord</td>
+                            <td>Over 1.5</td>
                         </tr>
 
                     </tbody>
