--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
             <br>
             
             <div class="table-responsive col-lg-10 col-lg-offset-1">
-                <table class="table" id="">
+                SPORTY CODE: F0B9D7
+                <!-- <table class="table" id="">
                     <thead>
                         <tr class="btn-primary">
                             <th>SN</th>
@@ -168,7 +169,7 @@
                         </tr>
 
                     </tbody>
-                </table>
+                </table> -->
             </div>
 
             <br>
