--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
             </div>
 
             <div class="betting_tip">
-                <a class="" href="https://samuelaidoo.notion.site/Betting-171fccac3a294444b613fa9509304248?pvs=4" data-toggle="modal" data-target="#flipFlop">Betting Blog</a>
+                <a class="btn btn-primary" href="https://samuelaidoo.notion.site/Betting-171fccac3a294444b613fa9509304248?pvs=4" style="color:white">Betting Blog</a>
+
+                <!-- <a class="" href="https://samuelaidoo.notion.site/Betting-171fccac3a294444b613fa9509304248?pvs=4" data-toggle="modal" data-target="#flipFlop">Betting Blog</a> -->
                 <!-- <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#flipFlop">
                     Click Me
                     </button> -->
