--- a/index.html
+++ b/index.html
@@ -145,11 +145,12 @@
         <div class="row">
             <br>
             <br>
-            <p style="text-align: center;">DAILY BET TIPS</p>
+            <p style="text-align: center;">1.5 Odds Rollover for the next 30 days(Double Chance)</p>
+            <p>NB: Start with any small amount and let grow it together</p>
             <br>
             
             <div class="table-responsive col-lg-10 col-lg-offset-1">
-                <span style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; background-color: #eee; color: #333; padding: 5px; border-radius: 5px;">SPORTY CODE: C91A03</span>
+                <span style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; background-color: #eee; color: #333; padding: 5px; border-radius: 5px;">SPORTY CODE: 396DD87</span>
                 <!-- <table class="table" id="">
                     <thead>
                         <tr class="btn-primary">
