--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <br>
             <br>
             <p style="text-align: center;">1.5 Odds Rollover for the next 30 days(Double Chance)</p>
-            <p>NB: Start with any small amount and let grow it together</p>
+            <p style="text-align: center;">NB: Start with any small amount and let grow it together</p>
             <br>
             
             <div class="table-responsive col-lg-10 col-lg-offset-1">
