--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
             <br>
             <p style="text-align: center;">1.5 Odds Rollover for the next 30 days(Double Chance)</p>
             <p style="text-align: center;">NB: Start with any small amount and let grow it together</p>
-            <span style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; background-color: #eee; color: #cf2121; padding: 5px; border-radius: 5px;">SPORTY CODE: 396DD87</span>
-
+            <p style="text-align:center;"><span style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; background-color: #eee; color: #cf2121; padding: 5px; border-radius: 5px;">SPORTY CODE: 396DD87</span></p>
             <br>
             
             <div class="table-responsive col-lg-10 col-lg-offset-1">
