--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
 
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
 
+    <style>
+        .glowing-effect {
+            text-align: center;
+            font-size: 20px;
+            font-family: 'Arial', sans-serif;
+            background-color: #eee;
+            color: #cf2121;
+            padding: 5px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px #cf2121, 0 0 30px #cf2121, 0 0 40px #cf2121, 0 0 50px #cf2121;
+            text-shadow: 0 0 5px #cf2121, 0 0 10px #cf2121, 0 0 15px #cf2121;
+        }
+    </style>
 </head>
 
 <body>
@@ -147,7 +160,9 @@
             <br>
             <p style="text-align: center;">1.5 Odds Rollover for the next 30 days(Double Chance)</p>
             <p style="text-align: center;">NB: Start with any small amount and let grow it together</p>
-            <p style="text-align:center;"><span style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; background-color: #eee; color: #cf2121; padding: 5px; border-radius: 5px;">SPORTYBET CODE: 396DD87</span></p>
+            <!-- <p style="text-align:center;"><span style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; background-color: #eee; color: #cf2121; padding: 5px; border-radius: 5px;">SPORTYBET CODE: 396DD87</span></p> -->
+            <p class="glowing-effect">SPORTYBET CODE: 396DD87</p>
+
             <br>
             
             <div class="table-responsive col-lg-10 col-lg-offset-1">
