--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p style="text-align: center;">1.5 Odds Rollover for the next 30 days(Double Chance)</p>
             <p style="text-align: center;">NB: Start with any small amount and let grow it together</p>
             <!-- <p style="text-align:center;"><span style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; background-color: #eee; color: #cf2121; padding: 5px; border-radius: 5px;">SPORTYBET CODE: 396DD87</span></p> -->
-            <p class="glowing-effect">SPORTYBET CODE: 396DD87</p>
+            <p style="text-align:center;"><span class="glowing-effect">SPORTYBET CODE: 396DD87</span></p>
 
             <br>
             
