--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             font-size: 20px;
             font-family: 'Arial', sans-serif;
             background-color: #eee;
-            color: #cf2121;
+            color: black;
             padding: 5px;
             border-radius: 5px;
             animation: glowing 1.5s infinite alternate;
