--- a/index.html
+++ b/index.html
@@ -205,9 +205,11 @@
     </header>
     <main>
         <div class="row">
-            <p style="text-align:center;"><span class="glowing-effect">DAY 2</span></p>
+            <p style="text-align:center;"><span class="glowing-effect">NOTICE</span></p>
 
-            <p style="text-align:center;"><span class="glowing-effect">SPORTYBET CODE: 5079F0F8</span></p>
+            <!-- <p style="text-align:center;"><span class="glowing-effect">SPORTYBET CODE: 5079F0F8</span></p> -->
+
+            <p style="text-align:center;">Do you need a software to help you management betting account for people. Checkout <a href="https://app.tivateonline.com/invest50/">Invest50</a> and if you want such a software send me email on samuelaidoo45@gmail.com</p>
             
             <br>
             <p style="text-align: center;">1.5 Odds Rollover for the next 30 days(Double Chance)</p>
