--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
             <p style="text-align:center;">Do you need a software to help you management betting account for people. Checkout <a href="https://app.tivateonline.com/invest50/">Invest50</a> and if you want such a software send me email on samuelaidoo45@gmail.com</p>
             
             <br>
-            <p style="text-align: center;">1.5 Odds Rollover for the next 30 days(Double Chance)</p>
-            <p style="text-align: center;">NB: Start with any small amount and let grow it together</p>
+            <!-- <p style="text-align: center;">1.5 Odds Rollover for the next 30 days(Double Chance)</p> -->
+            <!-- <p style="text-align: center;">NB: Start with any small amount and let grow it together</p> -->
             <!-- <p style="text-align:center;"><span style="text-align: center; font-size: 20px; font-family: 'Arial', sans-serif; background-color: #eee; color: #cf2121; padding: 5px; border-radius: 5px;">SPORTYBET CODE: 396DD87</span></p> -->
             <br>
 
